update all internal links to https

--- a/src/mongly/2011-10-09-The-MongoDB-Collection.html
+++ b/src/mongly/2011-10-09-The-MongoDB-Collection.html
@@ -22,7 +22,7 @@ p{color:#666;margin:2px;width:450px}
   <h2>Getting Started? Try...</h2>
    <ul>
      <li>
-       <a href="http://openmymind.net/mongodb.pdf">
+       <a href="https://www.openmymind.net/mongodb.pdf">
          The Little MongoDB Book
          <p>The ultimate introduction to MongoDB can be found in this concise and easy to read free ebook</p>
        </a>
